--- a/nginx/templates/service.yaml
+++ b/nginx/templates/service.yaml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   name: nginx
 spec:
+  type: LoadBalancer
   selector:
     app: nginx
     project: helm
@@ -10,3 +11,4 @@ spec:
   - protocol: TCP
     port: 80 #service-port
     targetPort: {{ .Values.configmap.port }} #target-port
+    nodePort: {{ .Values.service.nodePort }} #32768
