--- a/nginx/values.yaml
+++ b/nginx/values.yaml
@@ -1,7 +1,8 @@
 configmap:
   port: 8080
 deployment:
-  replicas: 2
-  imageVersion: latest
-  
+  replicas: 2 #3
+  imageVersion: latest  #mainline-bookworm-perl
+service:
+  nodePort: 32768
   
