--- a/nginx/templates/service.yaml
+++ b/nginx/templates/service.yaml
@@ -11,4 +11,4 @@ spec:
   - protocol: TCP
     port: 80 #service-port
     targetPort: {{ .Values.configmap.port }} #target-port
-    nodePort: {{ .Values.service.nodePort }} #32768
+    nodePort: {{ .Values.service.nodePort }} 
